# chipate

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: cpu.rs  gfx.rs  memory.rs  mod.rs
