[package]
name = "chipate"
description = "A CHIP-8 emulator."
version = "0.1.0"
authors = ["Dustin Dobervich <ddobervich@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/dustin10/chip-8-emu"
rust-version = "1.81"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
