[package]
name = "chipate"
description = "A CHIP-8 emulator."
version = "0.1.0"
authors = ["Dustin Dobervich <ddobervich@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/dustin10/chipate"
rust-version = "1.81"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
rand = "0.8.5"
sdl2 = { version = "0.37.0" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
